--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "files.associations": {
     "sstream": "cpp",
-    "regex": "cpp"
+    "regex": "cpp",
+    "ostream": "cpp",
+    "typeinfo": "cpp"
   }
 }
